tests/testfiles/valid_prog_fails/5_64bit_to_int.c
int main() {
    int a = 64;
    int b = &a;

    return b;
}