tests/testfiles/invalid_prog_fails/16_triple_decl_wo_comma.c
int main() {
    int x y z;

    return 100;
}